[package]
name = "jproxy"
version = "1.0.2"
edition = "2021"
authors = ["Homing So <i@homing.so>"]
description = "Just a proxy"
license = "MIT"
readme = "README.md"
repository = "https://github.com/hominsu/jproxy"
keywords = ["proxy", "http"]
categories = ["network-programming", "web-programming"]
exclude = ["configs", "deploy", ".*"]
rust-version = "1.84"

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[features]
mimalloc = ["dep:mimalloc"]
rpmalloc = ["dep:rpmalloc"]
snmalloc = ["dep:snmalloc-rs"]
tikv-jemallocator = ["dep:tikv-jemallocator"]

[dependencies]
rand = "0.9"
bytes = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }

# async
futures-util = "0.3"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "signal"] }

# memory allocator
mimalloc = { version = "0.1", optional = true }
rpmalloc = { version = "0.2", optional = true }
snmalloc-rs = { version = "0.3", optional = true }
tikv-jemallocator = { version = "0.6", optional = true }

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# cli
clap = { version = "4.5", features = ["derive", "env"] }

# hot reload config
glob = { version = "0.3" }
notify = { version = "8.0.0" }
config = { version = "0.15", features = ["toml", "json", "yaml", "ini", "ron", "json5"] }

# http
http = "1"
http-body-util = "0.1"
hyper = { version = "1.6", features = ["client", "http1", "server"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "server", "service", "tokio"] }
tower-service = { version = "0.3" }

ipnet = { version = "2.11", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
rtnetlink = "0.14.1"
netlink-packet-route = "0.19.0"
